5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1758_1577.log
== TEST (2019-05-23 11:28:20) 
-- CODE:
from murpy import*

a = array(eval(input("aceleracao constante:")))
v0 = array(eval(input("velocidade inicial:")))
n = array(eval(input("um numero inteiro:")))

t = arange(n)

d[t] = (a * [t]**2)/ 2 + v0*[t]

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from murpy import*
ModuleNotFoundError: No module named 'murpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:28:33) 
-- CODE:
from numpy import*

a = array(eval(input("aceleracao constante:")))
v0 = array(eval(input("velocidade inicial:")))
n = array(eval(input("um numero inteiro:")))

t = arange(n)

d[t] = (a * [t]**2)/ 2 + v0*[t]

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:34:47) 
-- CODE:
from numpy import*

a = float(input("aceleracao constante:"))
v0 = float(input("velocidade inicial:"))
n = int(input("um numero inteiro:"))

t = arange(n)
d = zeros(n, dtype = int )

d[t] = (a * [t]**2)/ 2 + v0*[t]

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:35:15) 
-- CODE:
from numpy import*

a = float(input("aceleracao constante:"))
v0 = float(input("velocidade inicial:"))
n = int(input("um numero inteiro:"))

t = arange(n)
d = zeros(n, dtype = int )

d[t] = (a * [t]**2)/ 2 + v0*[t]

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:37:40) 
-- CODE:
from numpy import*

a = float(input("aceleracao constante:"))
v0 = float(input("velocidade inicial:"))
n = int(input("um numero inteiro:"))
t = 0 
v = arange(n)
d = zeros(n, dtype = int )

while(t < n):
	d = (a * t**2)/ 2 + v0*t
	r[t] = d
	t = t + 1
print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:41:00) 
-- CODE:
from numpy import*

a = float(input("aceleracao constante:"))
v0 = float(input("velocidade inicial:"))
n = int(input("um numero inteiro:"))
t = 0 
v = arange(n)
d = zeros(n, dtype = int )

while(t < n):
	d = (a * t**2)/ 2 + v0*t
	v[t] = d
	t = t + 1
print(r)

-- EXECUTION TIME:
0.620498
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 14, in <module>
    print(r)
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:41:06) 
-- CODE:
from numpy import*

a = float(input("aceleracao constante:"))
v0 = float(input("velocidade inicial:"))
n = int(input("um numero inteiro:"))
t = 0 
v = arange(n)
d = zeros(n, dtype = int )

while(t < n):
	d = (a * t**2)/ 2 + v0*t
	v[t] = d
	t = t + 1
print(v)

-- EXECUTION TIME:
0.441976
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0   4   9  15  23  32  42  53  65  79  94 110]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0    81   172   273   384   505   635   775   925  1085  1255  1434
  1623  1822  2031  2250  2478  2716  2964  3222  3490  3767  4054  4351
  4658  4975  5301  5637  5983  6339  6705  7080  7465  7860  8265  8680
  9104  9538  9982 10436 10900 11373 11856]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:41:56) 
-- CODE:
from numpy import*

a = float(input("aceleracao constante:"))
v0 = float(input("velocidade inicial:"))
n = int(input("um numero inteiro:"))
t = 0 
v = arange(n)
d = zeros(n)

while(t < n):
	e = (a * t**2)/ 2 + v0*t
	v[t] = e
	t = t + 1
print(v)

-- EXECUTION TIME:
0.540798
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0   4   9  15  23  32  42  53  65  79  94 110]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0    81   172   273   384   505   635   775   925  1085  1255  1434
  1623  1822  2031  2250  2478  2716  2964  3222  3490  3767  4054  4351
  4658  4975  5301  5637  5983  6339  6705  7080  7465  7860  8265  8680
  9104  9538  9982 10436 10900 11373 11856]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:42:04) 
-- CODE:
from numpy import*

a = float(input("aceleracao constante:"))
v0 = float(input("velocidade inicial:"))
n = int(input("um numero inteiro:"))
t = 0 
v = arange(n)
d = zeros(n)

while(t < n):
	e = (a * t**2)/ 2 + v0*t
	d[t] = e
	t = t + 1
print(v)

-- EXECUTION TIME:
0.415739
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0  1  2  3  4  5  6  7  8  9 10 11]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:42:20) 
-- CODE:
from numpy import*

a = float(input("aceleracao constante:"))
v0 = float(input("velocidade inicial:"))
n = int(input("um numero inteiro:"))
t = 0 
v = arange(n)
d = zeros(n)

while(t < n):
	e = ((a * t**2)/ 2) + v0*t
	d[t] = e
	t = t + 1
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:42:24) 
-- CODE:
from numpy import*

a = float(input("aceleracao constante:"))
v0 = float(input("velocidade inicial:"))
n = int(input("um numero inteiro:"))
t = 0 
v = arange(n)
d = zeros(n)

while(t < n):
	e = ((a * t**2)/ 2) + v0*t
	d[t] = e
	t = t + 1
print(v)

-- EXECUTION TIME:
0.34494
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0  1  2  3  4  5  6  7  8  9 10 11]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:43:23) 
-- CODE:
from numpy import*

a = float(input("aceleracao constante:"))
v0 = float(input("velocidade inicial:"))
n = int(input("um numero inteiro:"))
t = 0 
v = arange(n)
d = zeros(n)

while(t < n):
	e = ((a * t**2)/ 2) + v0*t
	d[t] = e
	t = t + 1
print(d)

-- EXECUTION TIME:
0.481412
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
